--- a/vuetest/my-vue/package.json
+++ b/vuetest/my-vue/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "element-ui": "^2.14.1",
+    "moment": "^2.29.1",
     "vue": "^2.5.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
   },
